--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,9 @@ body
 {
 	font-size: 30px;
     line-height: 4px;
+   font-family: 'Vampiro One', cursive;
+
+
 }
 .navbar-toggle {
 	margin-top: 17px;
@@ -126,6 +129,8 @@ color: #fff;
     -o-transform: scale(1.1) rotate(360deg);
 }
 
+
+#
 /* ------------------------------ carousel style ---------------- */
 
 
@@ -144,16 +149,9 @@ color: #fff;
   min-width: 100%;
   height: 100%;
 }
-.search {
-    margin-top: -25%;
-}
-.search .form-section{
-    background:rgba(0,0,0,0.2);
-    border: 2px solid #414141;
-    border-radius: 5px;
-    padding: 10px;
-}
 
+
+/*end carousel style */
 
 
 
@@ -267,9 +265,34 @@ color: #fff;
 	padding-top: 15px;
 }
 
+
+/*begin search style*/
+
+.search {
+    margin-top: -25%;
+}
+.search .form-section{
+    background:rgba(0,0,0,0.2);
+    border: 2px solid #414141;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.search .form-section a:hover
+{
+    text-decoration: none;
+
+}
+
+/*end style search*/
+
 /*---------------------------------- Begin style jumbotron ------------------------- */
 
+.jumbotron
+{
+        margin-top: 128px;
 
+}
 
 .jumbotron h1 span
 {
@@ -1204,3 +1227,32 @@ a.list-group-item.active small {
 
 
 
+/*our teams*/
+.section h1{
+    font-size:4.5em;
+}
+
+.section p{
+ font-weight:400;
+ font-size:3em;   
+}
+
+ .img-quadrata {
+       border-radius:50%;
+       width:250px;
+       height:250px;
+}
+
+.section h3{
+        font-weight:800;
+        color:#f0ad4e;
+        font-size:2em;  
+}
+.section small{
+        text-align:center;
+        font-size:1.5em; 
+        text-decoration:underline;
+        color:gray;
+}
+
+/*end our teams*/
